# quantum-resistant-lock-script

./: .gitignore  .gitmodules  Cargo.toml  Makefile  Makefile.clang  README.md  benchmark.sh  checksums.txt  params.txt  performance.md  run_all.sh  run_sphincs_plus.sh
.github/workflows/: rust-with-clang.yml  rust.yml
build-tools/build-params-finder/: Cargo.toml
build-tools/build-params-finder/src/: main.rs
build-tools/patch-root-binary/: Cargo.toml
build-tools/patch-root-binary/src/: main.rs
build-tools/script-merge-tool/src/: main.rs
c/: ckb-sphincsplus-lock.c  ckb-sphincsplus.c  ckb-sphincsplus.h  ckb_vm_dbg.h
c/ref/: address.c  address.h  api.h  context.h  fips202.c  fips202.h  fips202_asm.S  fips202_asm_bin.S  fors.c  fors.h  haraka.c  haraka.h  haraka_offsets.h  hash.h  hash_haraka.c  hash_sha2.c  hash_shake.c  merkle.c  merkle.h  params.c  params.h  randombytes.c  randombytes.h  rng.c  rng.h  sha2.c  sha2.h  sha2_offsets.h  shake_offsets.h  sign.c  thash.h  thash_haraka_robust.c  thash_haraka_simple.c  thash_sha2_robust.c  thash_sha2_simple.c  thash_shake_robust.c  thash_shake_simple.c  utils.c  utils.h  utilsx1.c  (+5 more)
c/ref/params/: params-sphincs-dy.h  params-sphincs-haraka-128f.h  params-sphincs-haraka-128s.h  params-sphincs-haraka-192f.h  params-sphincs-haraka-192s.h  params-sphincs-haraka-256f.h  params-sphincs-haraka-256s.h  params-sphincs-sha2-128f.h  params-sphincs-sha2-128s.h  params-sphincs-sha2-192f.h  params-sphincs-sha2-192s.h  params-sphincs-sha2-256f.h  params-sphincs-sha2-256s.h  params-sphincs-shake-128f.h  params-sphincs-shake-128s.h  params-sphincs-shake-192f.h  params-sphincs-shake-192s.h  params-sphincs-shake-256f.h  params-sphincs-shake-256s.h
contracts/c-sphincs-all-in-one-lock/: Makefile  ckb-sphincsplus-common.h  ckb-sphincsplus-leaf-lock.c  ckb-sphincsplus-root-lock.c  ckb-sphincsplus.c  ckb-sphincsplus.h  nist-vector-tester.c
contracts/c-sphincs-all-in-one-lock/tools/: extract-sphincs-params.c
contracts/c-sphincs-all-in-one-lock/utils/: ckb_tx_message_all.h  witness_args_lazy_utils.h  zero_escape_encoding.h
contracts/hybrid-sphincs-all-in-one-lock/: Cargo.toml  Makefile  README.md
contracts/hybrid-sphincs-all-in-one-lock/src/: main.rs
contracts/spawn-exec-test-runner/: Cargo.toml  README.md
contracts/spawn-exec-test-runner/src/: main.rs
contracts/sphincs-all-in-one-lock/: Cargo.toml  README.md
contracts/sphincs-all-in-one-lock/.cargo-generate/: tests.rs
contracts/sphincs-all-in-one-lock/src/: main.rs
crates/ckb-fips205-utils/: Cargo.toml
crates/ckb-fips205-utils/src/: ckb_tx_message_all_from_mock_tx.rs  ckb_tx_message_all_in_ckb_vm.rs  lib.rs  message.rs  signing.rs  verifying.rs
crates/fuzzing-corpus-generator/: Cargo.toml
crates/fuzzing-corpus-generator/src/: main.rs
crates/intermediate-source-generator/: Cargo.toml
crates/script-merge-tool/: Cargo.toml
crates/script-merge-tool/src/: main.rs
docs/: advanced.md  internals.md  performance.md  simple.md
examples/: ckb-sphincsplus-example.c  ckb_vm_dbg.h
fuzzing/: Makefile  README.md  fuzzer.cc
mk/: files.mk
tests/multisig-tests/: Cargo.toml
tests/multisig-tests/src/: lib.rs  tests.rs  utils.rs
tests/nist-test-vector-tests/: Cargo.toml
tests/nist-test-vector-tests/src/: lib.rs  tests.rs  types.rs  utils.rs
tests/nist-test-vector-tests/test_vectors/: README.md
tests/precise-fuzzing/: Cargo.toml  README.md  ci.sh
tests/precise-fuzzing/fuzz/: Cargo.toml
tests/precise-fuzzing/fuzz/fuzz_targets/: fuzz_target_1.rs
tests/precise-fuzzing/src/: lib.rs
tests/sphincsplus/: Makefile  all_run.sh  ckb-sphincs-plus.c  re-run.sh  run.sh  test-ckb-sphincs-plus.c  test_data.h
tests/sphincsplus/fuzzer/: Makefile  run.sh  sphincs_plus_cover.c  sphincs_plus_fuzzer.c  sphincs_plus_fuzzer.h
tests/sphincsplus/optimization/: Makefile  optimization-sphincsplus.c  run-all-optimization.sh  sphincsplus.c
tests/sphincsplus/test_data/: haraka_128f_robust.h  haraka_128f_simple.h  haraka_128s_robust.h  haraka_128s_simple.h  haraka_192f_robust.h  haraka_192f_simple.h  haraka_192s_robust.h  haraka_192s_simple.h  haraka_256f_robust.h  haraka_256f_simple.h  haraka_256s_robust.h  haraka_256s_simple.h  sha2_128f_robust.h  sha2_128f_simple.h  sha2_128s_robust.h  sha2_128s_simple.h  sha2_192f_robust.h  sha2_192f_simple.h  sha2_192s_robust.h  sha2_192s_simple.h  sha2_256f_robust.h  sha2_256f_simple.h  sha2_256s_robust.h  sha2_256s_simple.h  shake_128f_robust.h  shake_128f_simple.h  shake_128s_robust.h  shake_128s_simple.h  shake_192f_robust.h  shake_192f_simple.h  shake_192s_robust.h  shake_192s_simple.h  shake_256f_robust.h  shake_256f_simple.h  shake_256s_robust.h  shake_256s_simple.h  sphincs-haraka-128f-robust.h  sphincs-haraka-128f-simple.h  sphincs-haraka-128s-robust.h  sphincs-haraka-128s-simple.h  (+32 more)
tests/sphincsplus_rust/: Cargo.toml  all_run.sh  build.rs  run_benchmark.sh  run_example.sh  run_rust.sh  run_rust_with_clang.sh
tests/sphincsplus_rust/examples/: generate_fix_infos.rs  run_base.rs
tests/sphincsplus_rust/src/: dummy_data_loader.rs  lib.rs  sphincsplus.rs  utils.rs
tests/sphincsplus_rust/tests/: misc.rs  test_sphincsplus.rs
tests/validation-tests/: Cargo.toml
tests/validation-tests/src/: callee_tests.rs  lib.rs  tests.rs
tools/: all_rust_testcase.sh  run_all.sh  test_case_rust.sh
tools/ckb-sphincs-tools/: Cargo.toml
tools/ckb-sphincs-tools/src/: main.rs  sub_conversion.rs  sub_gen_key.rs  sub_sign.rs  utils.rs
tools/ckb-sphincs-utils/: Cargo.toml  build.rs
tools/ckb-sphincs-utils/src/: lib.rs  sphincsplus.rs
