[workspace]
resolver = "2"

members = [
  "build-tools/build-params-finder",
  "build-tools/script-merge-tool",
  "contracts/sphincs-all-in-one-lock",
  "crates/ckb-fips205-utils",
  "tests/sphincsplus_rust",
  "tests/validation-tests",
  "tools/ckb-sphincs-tools",
  "tools/ckb-sphincs-utils",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
