[workspace]
resolver = "2"

members = [
  "contracts/hybrid-sphincs-all-in-one-lock",
  "contracts/sphincs-all-in-one-lock",
  "crates/ckb-fips205-utils",
  "crates/intermediate-source-generator",
  "crates/script-merge-tool",
  "tests/multisig-tests",
  "tests/nist-test-vector-tests",
  "tests/sphincsplus_rust",
  "tests/validation-tests",
  "tools/ckb-sphincs-tools",
  "tools/ckb-sphincs-utils",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
