[package]
name = "hybrid-sphincs-all-in-one-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.16.3"
ckb-gen-types = { version = "0.119.0", default-features = false }

[dependencies.ckb-fips205-utils]
path = "../../crates/ckb-fips205-utils"
default-features = false

[features]
native-simulator = ["ckb-std/native-simulator"]
