[package]
name = "sphincs-all-in-one-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.17.1"
ckb-gen-types = { version = "0.200.0-rc1", default-features = false }

[dependencies.ckb-fips205-utils]
path = "../../crates/ckb-fips205-utils"
default-features = false
features = ["verifying"]

[features]
# This is a dummy feature we won't use here
native-simulator = []
