[package]
name = "ckb-fips205-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.16.3"
ckb-rust-std = "1.0.0"
ckb-gen-types = { version = "0.119.0", default-features = false }
ckb-hash = { version = "0.119.0", default-features = false, features = ["ckb-contract"] }
molecule = { version = "0.8", default-features = false }

# Signing only crates
ckb-mock-tx-types = { version = "0.119.0", optional = true }
rand_core = { version = "0.6.4", optional = true }

[dependencies.fips205]
version = "0.4.1"
default-features = false
features = [
  "slh_dsa_sha2_128s",
  "slh_dsa_shake_128s",
  "slh_dsa_sha2_128f",
  "slh_dsa_shake_128f",
  "slh_dsa_sha2_192s",
  "slh_dsa_shake_192s",
  "slh_dsa_sha2_192f",
  "slh_dsa_shake_192f",
  "slh_dsa_sha2_256s",
  "slh_dsa_shake_256s",
  "slh_dsa_sha2_256f",
  "slh_dsa_shake_256f"
]

[features]
signing = ["fips205/default-rng", "ckb-mock-tx-types", "rand_core"]
