[package]
name = "multisig-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-testtool = "0.14.1"
serde_json = "1.0"
proptest = "1.0.0"
rand = "0.8.5"
rand_core = "0.6.4"

[dependencies.ckb-fips205-utils]
path = "../../crates/ckb-fips205-utils"
features = ["signing", "message"]

[dependencies.ckb_sphincs_utils]
path = "../../tools/ckb-sphincs-utils"
