[package]
name = "nist-test-vector-tests"
description = "Tests using NIST official test vectors."
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-testtool = "0.14.1"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_string_enum = "0.2.1"
unicase = "2.6.0"


[dependencies.ckb-fips205-utils]
path = "../../crates/ckb-fips205-utils"
default-features = false
features = ["serde", "message"]
