[package]
edition = "2021"
name = "sphincsplus_rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["shake", "hash_256", "hash_options_f", "thashes_robust"]
haraka = []
sha2 = []
shake = []

hash_128 = []
hash_192 = []
hash_256 = []

hash_options_f = []
hash_options_s = []

thashes_robust = []
thashes_simple = []

[dependencies]
ckb-chain-spec = "0.107.0"
ckb-hash = "0.107.0"
ckb-script = "0.107.0"
ckb-traits = "0.107.0"
ckb-types = "0.107.0"
lazy_static = "1.4.0"
libc = "0.2.139"
rand = "0.8.5"

[build-dependencies]
cc = "1.0.79"
