[package]
edition = "2021"
name = "sphincsplus_rust_test"
description = "This crate uses sphincsplus to sign signatures and feed to on-chain contracts"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["shake", "hash_128", "hash_options_f", "thashes_simple"]
haraka = ["ckb_sphincs_utils/haraka"]
sha2 = ["ckb_sphincs_utils/sha2"]
shake = ["ckb_sphincs_utils/shake"]

hash_128 = ["ckb_sphincs_utils/hash_128"]
hash_192 = ["ckb_sphincs_utils/hash_192"]
hash_256 = ["ckb_sphincs_utils/hash_256"]

hash_options_f = ["ckb_sphincs_utils/hash_options_f"]
hash_options_s = ["ckb_sphincs_utils/hash_options_s"]

thashes_robust = ["ckb_sphincs_utils/thashes_robust"]
thashes_simple = ["ckb_sphincs_utils/thashes_simple"]

serialize_key = ["ckb_sphincs_utils/serialize_key", "dep:clap", "dep:base64"]

[dependencies]
ckb_sphincs_utils = { path = "../../tools/ckb-sphincs-utils", default-features = false }
ckb-chain-spec = "0.107.0"
ckb-hash = "0.107.0"
ckb-script = "0.107.0"
ckb-traits = "0.107.0"
ckb-types = "0.107.0"
libc = "0.2.139"
num_enum = "0.5.10"
rand = "0.8.5"
clap = { version = "4.3.2", optional = true }
base64 = { version = "0.22.0", optional = true }

# We only rely on this crate to test public key / signature lengths
[dependencies.ckb-fips205-utils]
path = "../../crates/ckb-fips205-utils"
default-features = false
features = ["verifying"]

[[bin]]
name = "generate_fix_infos"
required-features = ["serialize_key"]

[[bin]]
name = "run_brenchmark"
required-features = ["serialize_key"]
