[package]
name = "validation-tests"
description = "Validation tests using https://github.com/integritychain/fips205 to generate signatures"
version = "0.1.0"
edition = "2021"

[dependencies]
fips205 = "0.4.1"
ckb-testtool = "0.14.1"
serde_json = "1.0"
proptest = "1.0.0"
rand = "0.8.5"
rand_core = "0.6.4"
ckb-fips205-utils = { path = "../../crates/ckb-fips205-utils", features = ["signing"] }
