[package]
edition = "2021"
name = "ckb_sphincs_utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["shake", "hash_128", "hash_options_f", "thashes_simple"]
haraka = []
sha2 = []
shake = []

hash_128 = []
hash_192 = []
hash_256 = []

hash_options_f = []
hash_options_s = []

thashes_robust = []
thashes_simple = []

serialize_key = ["dep:base64"]

[dependencies]
base64 = { version = "0.22.0", optional = true }

[dependencies.ckb-fips205-utils]
path = "../../crates/ckb-fips205-utils"
default-features = false

[build-dependencies]
cc = "1.0.79"
