[package]
name = "precise-fuzzing-cargo-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[features]
default = ["sha2_128s"]
sha2_128f = ["precise-fuzzing/sha2_128f"]
sha2_128s = ["precise-fuzzing/sha2_128s"]
sha2_192f = ["precise-fuzzing/sha2_192f"]
sha2_192s = ["precise-fuzzing/sha2_192s"]
sha2_256f = ["precise-fuzzing/sha2_256f"]
sha2_256s = ["precise-fuzzing/sha2_256s"]
shake_128f = ["precise-fuzzing/shake_128f"]
shake_128s = ["precise-fuzzing/shake_128s"]
shake_192f = ["precise-fuzzing/shake_192f"]
shake_192s = ["precise-fuzzing/shake_192s"]
shake_256f = ["precise-fuzzing/shake_256f"]
shake_256s = ["precise-fuzzing/shake_256s"]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.precise-fuzzing]
path = ".."
default-features = false

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
